--- a/Classes/TDDatePickerController.xib
+++ b/Classes/TDDatePickerController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" promptedForUpgradeToXcode5="NO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
@@ -16,16 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="5" id="7">
-                    <rect key="frame" x="0.0" y="244" width="320" height="216"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="5" translatesAutoresizingMaskIntoConstraints="NO" id="7">
+                    <rect key="frame" x="0.0" y="298" width="320" height="162"/>
                     <date key="date" timeIntervalSinceReferenceDate="307518385.97152603">
                         <!--2010-09-30 05:46:25 +0000-->
                     </date>
                 </datePicker>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="6">
-                    <rect key="frame" x="0.0" y="200" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6">
+                    <rect key="frame" x="0.0" y="254" width="320" height="44"/>
                     <items>
                         <barButtonItem title="Cancel" id="11">
                             <connections>
@@ -47,8 +45,17 @@
                 </toolbar>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="6" firstAttribute="leading" secondItem="5" secondAttribute="leading" id="2E5-LX-Diw"/>
+                <constraint firstAttribute="trailing" secondItem="7" secondAttribute="trailing" id="72b-B4-xGg"/>
+                <constraint firstItem="7" firstAttribute="top" secondItem="6" secondAttribute="bottom" id="EAI-uj-Mf0"/>
+                <constraint firstAttribute="trailing" secondItem="6" secondAttribute="trailing" id="Vrp-lu-L57"/>
+                <constraint firstAttribute="bottom" secondItem="7" secondAttribute="bottom" id="gsC-on-x4p"/>
+                <constraint firstItem="7" firstAttribute="leading" secondItem="5" secondAttribute="leading" id="y0t-Wq-fzv"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="389" y="353"/>
         </view>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
